Corrected Font size of H1 tag. Started work on spacing

--- a/style.css
+++ b/style.css
@@ -224,11 +224,11 @@ p{
 .section-form {
   background-color: #b9e6ff;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  margin-top: 1rem;
   align-items: center;
   flex-direction: row;
   height: 50rem;
-  padding-top: 10rem;
 }
 .form-text {
   display: flex;
@@ -236,16 +236,24 @@ p{
   flex-direction: column;
   align-items: center;
   text-align: right;
-  padding-right: 10rem;
-  width: 25%;
+  width: 50%;
+  font-size: 3.5rem;
+}
+.form-text h1{
+  width: 50%;
+  position: relative;
+  left: 20rem;
+}
+.form-text p{
+  font-size: 2rem;
+  width: 50%;
 }
 .form-entry {
   display: flex;
   justify-content: flex-start;
-  padding-top: 2rem;
-  width: 25%;
-  padding-left: 10rem;
-  margin-bottom: 2rem;
+  width: 50%;
+  position: relative;
+  left: 10rem;
 }
 .name {
   width: 100%;
@@ -257,15 +265,9 @@ p{
   width: 50%;
   margin-right: 1rem;
 }
-.input-firstname{
-  width: 100%;
-}
 .name-lastname{
   width: 50%;
   margin-left: 1rem;
-}
-.input-lastname{
-  width: 100%;
 }
 .form-input {
   background-color: #b9e6ff;
